Freedom Sanbox Ant Deploy/src/objects/Question_Bank_List__c.object
<CustomObject>
    <description>This will store all the questions  and will act as a master table to Questionnaire. Dummy questions will not have any answer (No Points).</description>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dummy?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Parent</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Question Bank Lists (Master Parent)</relationshipLabel>
        <relationshipName>MasterParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Question Bank Lists (Parent Question)</relationshipLabel>
        <relationshipName>Question_Bank_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Yes/No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multichoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Question Bank List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Bank Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>